[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json", "cookies"] }
num = "0.4.0"
regex = "1.11.1"
cached = "0.54"
rayon = "1.10.0"
# ndarray = "0.16.1"
# ndarray-linalg = "0.16.0"
nalgebra = "0.33.2"
